--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body style="background-color: #282828; text-align: center;margin-top: 200px;">
     <a href="convert.html"><button style="width: 200px;height: 50px;background-color: #ff7675;font-size: 18px;">Currency Converter</button></a>
     <a href="fortune-generator.html"><button style="width: 200px;height: 50px;background-color: #a29bfe;">Fortune-generator Converter</button></a>
-    <a href="quiz.html"><button style="width: 200px;height: 50px;background-color: #00b894;font-size: 18px;">Quiz Converter</button></a>
+    <a href="quiz.html"><button style="width: 200px;height: 50px;background-color: #00b894;font-size: 18px;">Quiz</button></a>
 </body>
 </html>
